--- a/_data/owner/en.yml
+++ b/_data/owner/en.yml
@@ -2,13 +2,13 @@
 # Owner's Personal Information
 ###########################################################
 # This is your brand name
-brand: "Your Brand"
+brand: "oodienn"
 
 # text below the brand name
 brand_sub_text: "$site_sample"
 
 # used for seo meta post author (if it's not defined in post)
-name: "Your Name"
+name: "Nur Faqih Imam"
 
 # home page top header texts
 home:
@@ -23,7 +23,7 @@ about:
 
 # if you don't want to add copyright year, comment or leave it blank.
 # the year during which the claimed copyright for the work was first asserted.
-copyright_start_year: "2022"
+copyright_start_year: "2019"
 
 # make sure creative_commons.enable is true in _data/conf/main.yml file
 creative_commons:
@@ -42,7 +42,7 @@ creative_commons:
 # seo meta this is needed for each language
 # If meta_description is not defined in front matter, it's created from (post / page) content,
 # if it has no content, this will be used for page description. It is also used in manifest.json
-meta_common_description: "Your meta description."
+meta_common_description: "Hanya menjelaskan tentang oodienn"
 
 # contact options (side nav bottom and about page)
 # the order of the items will be shown as here.
@@ -53,7 +53,7 @@ contacts:
   #- linkedin: ""
   #- twitter: ""
   #- mastodon: ""
-  #- instagram: ""
+  instagram: "https://instagram.com/nurfaqihimam_"
   #- youtube: ""
   #- facebook: ""
 # to add more, check the _data/const/contact.yml file
@@ -63,7 +63,7 @@ contacts:
 comments:
   # Create a Disqus account and fill out the items below.
   disqus:
-    shortname: ""
+    shortname: "nfiarts"
   # To use Giscus, go to https://giscus.app and look for the "Configuration".
   # - Enter your repository name, and it will create the following settings for you under "Enable giscus".
   # - Get the corresponding items and fill in the items below.
